--- a/Index.html
+++ b/Index.html
@@ -45,6 +45,7 @@
 		transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 	}
 
+
 	.form-row {
 		display: flex;
 		gap: 5px;
@@ -436,68 +437,6 @@
 			transform: scale(0.6);
 		}
 	}
-	    /* Estilos para el contenedor principal de slots */
-    .main-slots {
-        flex: 0 0 auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border: 2px solid #00fff7;
-        padding: 10px;
-        border-radius: 10px;
-        background-color: #00000020;
-        box-shadow: 0 0 10px rgba(255, 69, 0, 0.5);
-        transition: transform 0.3s ease-out;
-        width: 30%;
-        min-width: 610px;
-    }
-
-    /* Estilos para los controles de personalización */
-    #controls-container {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        width: 300px;
-        padding: 15px;
-        background: #333;
-        border-radius: 10px;
-        margin-top: 20px;
-    }
-
-    /* Estilos para los controles */
-    #customizationControls label {
-        font-size: 14px;
-        color: #fff;
-    }
-
-    #customizationControls input {
-        width: 100%;
-    }
-
-    textarea#kitPasteArea {
-        width: 100%;
-        height: 100px;
-        margin-bottom: 15px;
-        padding: 10px;
-        font-size: 14px;
-        border-radius: 8px;
-        border: 2px solid #ccc;
-    }
-
-    #pasteKitButton {
-        padding: 10px 15px;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        transition: background-color 0.3s;
-    }
-
-    #pasteKitButton:hover {
-        background-color: #45a049;
-    }
     </style>
 </head>
 <body>
@@ -514,30 +453,7 @@
         <div>Kits You've Generated: <span id="localCounter">0</span></div>
         <div>Kits Generated Globally: <span id="globalCounter">0</span></div>
     </div>
-<!-- Botón para mostrar/ocultar controles -->
-<button id="toggleControlsButton">Mostrar Controles</button>
 
-<!-- Contenedor para los controles -->
-<div id="controls-container" style="display: none;">
-    <textarea id="kitPasteArea" placeholder="Pega tu kit aquí..."></textarea>
-    <button id="pasteKitButton">Pegar tu kit</button>
-
-    <div id="customizationControls">
-        <label for="borderColor">Color de borde:</label>
-        <input type="color" id="borderColor" value="#00fff7">
-
-        <label for="backgroundImage">Imagen de fondo (Solo para el contenedor):</label>
-        <input type="file" id="backgroundImage" accept="image/*">
-
-        <label for="shadowEffect">Sombras:</label>
-        <input type="checkbox" id="shadowEffect">
-    </div>
-</div>
-
-<!-- Contenedor principal de slots (El layout 6x4 sigue intacto) -->
-<div class="main-slots" id="kitContainer">
-    <!-- Aquí irán los slots, pero la estructura original no cambia -->
-</div>
     <h1>VieraGuti's Kit Generator+</h1>
 
     <div class="form-row">
@@ -609,6 +525,7 @@
     <div id="command_list"></div>
     <button id="copyCommands">COPY KIT COMMANDS</button>
     <button id="newKit">RESET BUILD</button>
+    <button id="toggleControlsButton">Mostrar Controles</button>
 	<input type="text" id="itemSearch" placeholder="Search items..." style="width: 200px; margin-left: 5px;">
 
 
@@ -784,7 +701,39 @@
         
         window.addEventListener('resize', updateGalleryHeight);
     };
+// Función para alternar la visibilidad de los controles
+document.getElementById('toggleControlsButton').addEventListener('click', function() {
+    const controlsContainer = document.getElementById('controls-container');
+    const button = document.getElementById('toggleControlsButton');
 
+    // Si los controles están visibles, los ocultamos
+    if (controlsContainer.style.display === 'none') {
+        controlsContainer.style.display = 'block';
+        button.textContent = 'Guardar y Ocultar Controles';
+    } else {
+        // Aplicamos los cambios y ocultamos los controles
+        applyChanges();
+        controlsContainer.style.display = 'none';
+        button.textContent = 'Mostrar Controles';
+    }
+});
+// Función para aplicar los cambios
+function applyChanges() {
+    // Obtener el contenedor principal
+    const kitContainer = document.getElementById('kitContainer');
+
+    // Aplicar los nuevos valores al contenedor
+    kitContainer.style.borderColor = borderColor;
+    kitContainer.style.backgroundColor = backgroundColor;
+
+    if (backgroundImage) {
+        kitContainer.style.backgroundImage = `url(${backgroundImage})`;
+        kitContainer.style.backgroundSize = 'cover';
+        kitContainer.style.backgroundPosition = 'center';
+    } else {
+        kitContainer.style.backgroundImage = '';
+    }
+}
     function loadCategories() {
         const categorySelect = document.getElementById('category');
         Object.keys(items).forEach(category => {
@@ -1386,412 +1335,5 @@
 
     getGlobalCounter();
     </script>
-	<!-- Contenedor para el área de personalización y controles -->
-<div id="controls-container">
-    <!-- Área de entrada de comandos (pegar kit) -->
-    <textarea id="kitPasteArea" placeholder="Pega tu kit aquí..."></textarea>
-    <button id="pasteKitButton">Pegar tu kit</button>
-
-    <!-- Controles de personalización (Color de borde, Imagen de fondo, Sombras) -->
-    <div id="customizationControls">
-        <label for="borderColor">Color de borde:</label>
-        <input type="color" id="borderColor" value="#000000">
-
-        <label for="backgroundImage">Imagen de fondo (Solo para el contenedor):</label>
-        <input type="file" id="backgroundImage" accept="image/*">
-
-        <label for="shadowEffect">Sombras:</label>
-        <input type="checkbox" id="shadowEffect">
-    </div>
-</div>
-
-<!-- Contenedor principal de slots (El layout 6x4 sigue intacto) -->
-<div class="main-slots" id="kitContainer">
-    <!-- Aquí irán los slots, pero la estructura original no cambia -->
-</div>
-
-<style>
-    /* Estilos para el contenedor principal de slots (lo mantenemos igual) */
-    .main-slots {
-        flex: 0 0 auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        border: 2px solid #00fff7;
-        padding: 10px;
-        border-radius: 10px;
-        background-color: #00000020;
-        box-shadow: 0 0 10px rgba(255, 69, 0, 0.5);
-        transition: transform 0.3s ease-out;
-        width: 30%;
-        min-width: 610px;
-    }
-
-    /* Aseguramos que la galería se mantenga igual */
-    .gallery-container {
-        flex: 1;
-        min-width: 0;
-        border: 2px solid #00fff7;
-        border-radius: 10px;
-        padding: 10px;
-        height: var(--main-slots-height);
-        overflow-y: auto;
-        min-width: 30vw;
-    }
-
-    .image-container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-        justify-content: flex-start;
-        align-content: flex-start;
-    }
-
-    /* Los slots (pequeños y principales) no cambian */
-    .small-slot, .main-slot {
-        width: 64px;
-        height: 64px;
-        border: 1px solid #00fff7;
-        margin: 5px;
-        background-color: #000000a1;
-        position: relative;
-        text-align: center;
-        line-height: 64px;
-        border-radius: 5px;
-        transition: background-color 0.3s, transform 0.2s ease-in-out;
-        margin-bottom: 25px;
-    }
-
-    /* Nuevo contenedor de controles sin romper el diseño original */
-    #controls-container {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        width: 300px;
-        padding: 15px;
-        background: #333;
-        border-radius: 10px;
-        margin-top: 20px;
-    }
-
-    /* Estilo para los controles dentro del contenedor */
-    #customizationControls label {
-        font-size: 14px;
-        color: #fff;
-    }
-
-    #customizationControls input {
-        width: 100%;
-    }
-
-    textarea#kitPasteArea {
-        width: 100%;
-        height: 100px;
-        margin-bottom: 15px;
-        padding: 10px;
-        font-size: 14px;
-        border-radius: 8px;
-        border: 2px solid #ccc;
-    }
-
-    #pasteKitButton {
-        padding: 10px 15px;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        transition: background-color 0.3s;
-    }
-
-    #pasteKitButton:hover {
-        background-color: #45a049;
-    }
-</style>
-
-<script>
-    // Añadimos la funcionalidad para pegar el kit en los slots sin romper el diseño original
-    document.getElementById('pasteKitButton').addEventListener('click', () => {
-        const pasteArea = document.getElementById('kitPasteArea');
-        const commands = pasteArea.value.trim().split('\n');
-
-        if (commands.length === 0) {
-            alert('No hay comandos para pegar.');
-            return;
-        }
-
-        let isResetRequired = false;
-
-        commands.forEach(command => {
-            const regex = /^kit add "(.*?)" "(.*?)" (\d+) 1 "(.*?)"$/;
-            const match = command.match(regex);
-            
-            if (match) {
-                const kitName = match[1];
-                const itemId = match[2];
-                const quantity = parseInt(match[3]);
-                const slotType = match[4];
-
-                let targetSlot = null;
-                if (slotType === 'wear') {
-                    targetSlot = findFirstAvailableSlot('wear');
-                } else if (slotType === 'main') {
-                    targetSlot = findFirstAvailableSlot('main');
-                } else if (slotType === 'belt') {
-                    targetSlot = findFirstAvailableSlot('belt');
-                }
-
-                if (targetSlot) {
-                    applyItemToSlot(targetSlot, {
-                        id: itemId,
-                        category: slotType
-                    }, quantity);
-                } else {
-                    isResetRequired = true;
-                }
-            } else {
-                alert('Comando no válido: ' + command);
-            }
-        });
-
-        if (isResetRequired) {
-            alert('Debes resetear primero antes de aplicar este kit.');
-        }
-
-        pasteArea.value = '';
-        updateKitCommands();  
-    });
-
-    function findFirstAvailableSlot(slotType) {
-        const slots = document.querySelectorAll(`[data-type="${slotType}"]`);
-        for (let slot of slots) {
-            if (!slot.dataset.id) {
-                return slot;
-            }
-        }
-        return null;
-    }
-
-    function applyItemToSlot(slot, item, quantity) {
-        const itemContainer = document.createElement('div');
-        itemContainer.className = 'item-container';
-
-        const imgSlot = document.createElement('img');
-        imgSlot.src = `images/${item.id}.png`;
-        imgSlot.style.width = '100%';
-        imgSlot.style.height = '100%';
-
-        const controls = document.createElement('div');
-        controls.className = 'slot-controls';
-
-        const quantityDisplay = document.createElement('span');
-        quantityDisplay.className = 'quantity-display';
-        quantityDisplay.textContent = quantity;
-
-        quantityDisplay.onclick = (e) => {
-            e.stopPropagation();
-            const newQuantity = prompt('Enter new quantity:', quantity);
-            if (newQuantity !== null && !isNaN(newQuantity) && newQuantity > 0) {
-                quantityDisplay.textContent = newQuantity;
-                updateKitCommands();
-            }
-        };
-
-        controls.appendChild(quantityDisplay);
-
-        const removeBtn = document.createElement('button');
-        removeBtn.textContent = 'X';
-        removeBtn.className = 'remove-item';
-        removeBtn.onclick = () => {
-            slot.innerHTML = '';
-            updateKitCommands();
-        };
-
-        controls.appendChild(removeBtn);
-        itemContainer.appendChild(imgSlot);
-        itemContainer.appendChild(controls);
-
-        slot.appendChild(itemContainer);
-    }
-
-    function updateKitCommands() {
-        // Actualiza la lista de comandos para reflejar los cambios
-        const commandList = document.getElementById('command_list');
-        commandList.textContent = generateKitCommands();
-    }
-
-    function generateKitCommands() {
-        // Genera los comandos para el kit basado en los ítems actuales
-        return 'kit add "KitName" "ItemID" 1 1 "wear"';
-    }
-</script>
-<script>
-    // Variable global para almacenar los cambios
-    let currentBorderColor = '#00fff7';
-    let currentBackgroundImage = null;
-    let currentShadowEffect = false;
-
-    // Función para alternar la visibilidad de los controles
-    document.getElementById('toggleControlsButton').addEventListener('click', () => {
-        const controlsContainer = document.getElementById('controls-container');
-        const button = document.getElementById('toggleControlsButton');
-
-        // Si los controles están visibles, los ocultamos y aplicamos los cambios
-        if (controlsContainer.style.display === 'none') {
-            controlsContainer.style.display = 'flex';
-            button.textContent = 'Guardar y Ocultar Controles';
-        } else {
-            // Aplicamos los cambios antes de ocultarlos
-            applyCustomizationChanges();
-
-            controlsContainer.style.display = 'none';
-            button.textContent = 'Mostrar Controles';
-        }
-    });
-
-    // Función para aplicar los cambios al contenedor del kit
-    function applyCustomizationChanges() {
-        const kitContainer = document.getElementById('kitContainer');
-        kitContainer.style.borderColor = currentBorderColor;
-
-        // Si se seleccionó una imagen de fondo, la aplicamos
-        if (currentBackgroundImage) {
-            kitContainer.style.backgroundImage = `url(${currentBackgroundImage})`;
-            kitContainer.style.backgroundSize = 'cover';
-            kitContainer.style.backgroundPosition = 'center';
-        } else {
-            kitContainer.style.backgroundImage = '';
-        }
-
-        // Si las sombras están activadas, las aplicamos
-        if (currentShadowEffect) {
-            kitContainer.style.boxShadow = '0 0 20px rgba(255, 69, 0, 0.7)';
-        } else {
-            kitContainer.style.boxShadow = '0 0 10px rgba(255, 69, 0, 0.5)';
-        }
-    }
-
-    // Función para actualizar las configuraciones cuando el usuario cambia los valores
-    document.getElementById('borderColor').addEventListener('input', (e) => {
-        currentBorderColor = e.target.value;
-    });
-
-    document.getElementById('backgroundImage').addEventListener('change', (e) => {
-        const file = e.target.files[0];
-        if (file) {
-            const reader = new FileReader();
-            reader.onload = function (event) {
-                currentBackgroundImage = event.target.result;
-            };
-            reader.readAsDataURL(file);
-        }
-    });
-
-    document.getElementById('shadowEffect').addEventListener('change', (e) => {
-        currentShadowEffect = e.target.checked;
-    });
-
-    // Funcionalidad para pegar el kit
-    document.getElementById('pasteKitButton').addEventListener('click', () => {
-        const pasteArea = document.getElementById('kitPasteArea');
-        const commands = pasteArea.value.trim().split('\n');
-
-        if (commands.length === 0) {
-            alert('No hay comandos para pegar.');
-            return;
-        }
-
-        let isResetRequired = false;
-
-        commands.forEach(command => {
-            const regex = /^kit add "(.*?)" "(.*?)" (\d+) 1 "(.*?)"$/;
-            const match = command.match(regex);
-
-            if (match) {
-                const kitName = match[1];
-                const itemId = match[2];
-                const quantity = parseInt(match[3]);
-                const slotType = match[4];
-
-                let targetSlot = null;
-                if (slotType === 'wear') {
-                    targetSlot = findFirstAvailableSlot('wear');
-                } else if (slotType === 'main') {
-                    targetSlot = findFirstAvailableSlot('main');
-                } else if (slotType === 'belt') {
-                    targetSlot = findFirstAvailableSlot('belt');
-                }
-
-                if (targetSlot) {
-                    applyItemToSlot(targetSlot, {
-                        id: itemId,
-                        category: slotType
-                    }, quantity);
-                } else {
-                    isResetRequired = true;
-                }
-            } else {
-                alert('Comando no válido: ' + command);
-            }
-        });
-
-        if (isResetRequired) {
-            alert('Debes resetear primero antes de aplicar este kit.');
-        }
-
-        pasteArea.value = '';
-        updateKitCommands();
-    });
-
-    function findFirstAvailableSlot(slotType) {
-        const slots = document.querySelectorAll(`[data-type="${slotType}"]`);
-        for (let slot of slots) {
-            if (!slot.dataset.id) {
-                return slot;
-            }
-        }
-        return null;
-    }
-
-    function applyItemToSlot(slot, item, quantity) {
-        const itemContainer = document.createElement('div');
-        itemContainer.className = 'item-container';
-
-        const imgSlot = document.createElement('img');
-        imgSlot.src = `images/${item.id}.png`;
-        imgSlot.style.width = '100%';
-        imgSlot.style.height = '100%';
-
-        const controls = document.createElement('div');
-        controls.className = 'slot-controls';
-
-        const quantityDisplay = document.createElement('span');
-        quantityDisplay.className = 'quantity-display';
-        quantityDisplay.textContent = quantity;
-
-        controls.appendChild(quantityDisplay);
-
-        const removeBtn = document.createElement('button');
-        removeBtn.textContent = 'X';
-        removeBtn.className = 'remove-item';
-        removeBtn.onclick = () => {
-            slot.innerHTML = '';
-            updateKitCommands();
-        };
-
-        controls.appendChild(removeBtn);
-        itemContainer.appendChild(imgSlot);
-        itemContainer.appendChild(controls);
-
-        slot.appendChild(itemContainer);
-    }
-
-    function updateKitCommands() {
-        // Actualiza la lista de comandos para reflejar los cambios
-        const commandList = document.getElementById('command_list');
-        commandList.textContent = '';
-    }
-</script>
 </body>
 </html>
