--- a/Index.html
+++ b/Index.html
@@ -436,6 +436,44 @@
 			transform: scale(0.6);
 		}
 	}
+	    #configPanel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #00fff7;
+    padding: 20px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 1000;
+}
+
+#configPanel input {
+    margin: 10px;
+    padding: 10px;
+    background-color: #333;
+    color: #fff;
+    border: 1px solid #00fff7;
+    border-radius: 5px;
+}
+
+button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #00fff7;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #00a3cc;
+}
+	    }
     </style>
 </head>
 <body>
@@ -1300,6 +1338,35 @@
 	};
 
     getGlobalCounter();
+	    // Toggle config panel visibility
+document.getElementById("configBtn").addEventListener("click", function() {
+    const panel = document.getElementById("configPanel");
+    panel.style.display = (panel.style.display === "none" || panel.style.display === "") ? "flex" : "none";
+});
+
+// Apply configurations
+document.getElementById("applyConfigs").addEventListener("click", function() {
+    const color = document.getElementById("colorPicker").value;
+    const bgImageUrl = document.getElementById("bgImage").value;
+
+    // Apply background color
+    document.body.style.backgroundColor = color;
+
+    // Apply background image
+    if (bgImageUrl) {
+        document.body.style.backgroundImage = `url(${bgImageUrl})`;
+    } else {
+        document.body.style.backgroundImage = "none";
+    }
+
+    // Close the panel after applying
+    document.getElementById("configPanel").style.display = "none";
+});
+
+// Close the config panel without applying changes
+document.getElementById("closeConfig").addEventListener("click", function() {
+    document.getElementById("configPanel").style.display = "none";
+});
     </script>
 </body>
 </html>
