--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kits Generator - Rust Style</title>
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
-   <style>
+<style>
 	body {
 		font-family: 'Russo One', sans-serif;
 		background-color: #00000000;
@@ -17,7 +17,7 @@
 		transition: background-color 0.5s ease-in-out;
 		background-image: url('https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMjA4OGV0dnMzMmFmcnd0ZzUyZjF4c2ZhYjhoNDdrcWJmcXp3a3UycCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Co4o0MS48vsJibPvQ4/giphy.gif');
 		background-size: contain;
-    }
+	}
 
 	h3 {
 		text-align: center;
@@ -52,8 +52,9 @@
 
 	.form-group {
 		flex: 1;
-		min-width: 0;
+		min-width: 0; /* Allows flex items to shrink below content size */
 	}
+
 	button {
 		cursor: pointer;
 		width: auto;
@@ -82,10 +83,7 @@
 		border: 2px solid #00fff7;
 		padding: 10px;
 		border-radius: 10px;
-		background-color: #00000020; /* Color de fondo predeterminado */
-		background-image: none; /* Sin imagen de fondo por defecto */
-		background-size: cover;  /* Asegura que la imagen de fondo cubra el área */
-		background-position: center;  /* Centra la imagen */
+		background-color: #00000020;
 		box-shadow: 0 0 10px rgba(255, 69, 0, 0.5);
 		transition: transform 0.3s ease-out;
 		width: 30%;
@@ -143,7 +141,7 @@
 		line-height: 64px;
 		border-radius: 5px;
 		transition: background-color 0.3s, transform 0.2s ease-in-out;
-		margin-bottom: 25px;
+		margin-bottom: 25px; /* Space for controls */
 	}
 
 	.main-slot:hover {
@@ -229,14 +227,14 @@
 		display: flex;
 		background: rgba(0, 0, 0, 0.7);
 		border-radius: 4px;
-		padding: 2px 6px;
+		padding: 2px 6px;  /* Increased padding for better look */
 		z-index: 10;
 	}
 
 	.quantity-display {
 		background: rgba(0, 0, 0, 0.5);
 		color: #fff;
-		padding: 0 6px;
+		padding: 0 6px;  /* Increased padding */
 		font-size: 12px;
 		line-height: 16px;
 		border-radius: 2px;
@@ -325,7 +323,7 @@
 		height: 100%;
 		background: rgba(0, 0, 0, 0.8);
 		display: flex;
-		justify-content: center;
+			justify-content: center;
 		align-items: center;
 		z-index: 1000;
 	}
@@ -364,6 +362,7 @@
 			margin-left: 0vw;
 		}
 	}
+
 	@media (max-width: 1150px) {
 		.content-row {
 			flex-direction: column;
@@ -397,11 +396,13 @@
 			font-size: 1.5em;
 		}
 	}
+
 	@media (max-width: 768px) {
 		.form-row {
 			gap: 10px;
 		}
 	}
+
 	@media (max-width: 600px) {
 		body {
 			transform: scale(0.9);
@@ -409,7 +410,8 @@
 		.main-slots {
 			transform: scale(0.85);
 		}
-	}	
+	}
+
 	@media (max-width: 500px) {
 		body {
 			transform: scale(0.9);
@@ -418,6 +420,7 @@
 			transform: scale(0.7);
 		}
 	}
+
 	@media (max-width: 480px) {
 		.small-slot, .main-slot {
 			width: 42px;
@@ -431,6 +434,7 @@
 			font-size: 1.2em;
 		}
 	}
+
 	@media (max-width: 425px) {
 		body {
 			transform: scale(0.9);
@@ -443,24 +447,29 @@
 
 </head>
 <body>
-<!-- Controles de configuración para el color y la imagen de fondo -->
-<div id="myConfigMenu" class="config-menu">
-    <div>
-        <label for="kitCommand">Paste your kit command:</label>
-        <textarea id="kitCommand" rows="4" cols="50"></textarea>
-        <button id="loadKitFromCommand">Load Kit</button>
-    </div>
-    <div>
-        <label for="interfaceColor">Change Interface Color:</label>
-        <input type="color" id="interfaceColor" value="#ffffff">
-    </div>
-    <div>
-        <label for="backgroundImage">Set Background Image:</label>
-        <input type="file" id="backgroundImage" accept="image/*">
-    </div>
-    <button id="closeConfig">Close</button>
+<!-- Editor de color -->
+<input type="color" id="borderColorPicker" value="#00fff7" onchange="changeBorderColor(this.value)">
+<button onclick="loadKit()">Load Kit</button>
+
+<!-- Aquí se mostrarán los ítems cargados -->
+<div id="kitContainer"></div>
+
+<!-- Campo para ingresar los comandos -->
+<div id="command_list" contenteditable="true">
+    kit add "vipkit" "deer.skull.mask" 1 1 "wear"
+    kit add "vipkit" "diving.tank" 1 1 "wear"
+    kit add "vipkit" "boots.frog" 1 1 "wear"
+    kit add "vipkit" "jacket" 1 1 "wear"
+    kit add "vipkit" "hoodie" 1 1 "wear"
+    kit add "vipkit" "grenade.f1" 4242424 1 "main"
+    kit add "vipkit" "smg.mp5" 2323 1 "belt"
 </div>
 
+<!-- Botón para cargar el kit -->
+<button onclick="loadKit()">Load Kit</button>
+
+<!-- Botón para agregar un nuevo kit -->
+<button onclick="addNewKit()">Add New Kit</button>
     <div class="counter-container" style="
         display: flex;
         justify-content: space-between;
@@ -612,26 +621,6 @@
 
     <script src="Items.js"></script>
     <script>
-	// Cambiar color de fondo en .main-slots
-document.getElementById("interfaceColor").addEventListener("input", function(event) {
-    document.querySelectorAll(".main-slots").forEach(function(slot) {
-        slot.style.backgroundColor = event.target.value;
-    });
-});
-
-// Cambiar fondo con imagen en .main-slots
-document.getElementById("backgroundImage").addEventListener("change", function(event) {
-    const reader = new FileReader();
-    reader.onload = function(e) {
-        document.querySelectorAll(".main-slots").forEach(function(slot) {
-            slot.style.backgroundImage = `url(${e.target.result})`;
-            slot.style.backgroundSize = 'cover'; // Ajuste de tamaño de la imagen
-            slot.style.backgroundPosition = 'center'; // Asegura que la imagen esté centrada
-        });
-    };
-    reader.readAsDataURL(event.target.files[0]);
-});
-
     let kitCounter = localStorage.getItem('kitCount') ? parseInt(localStorage.getItem('kitCount')) : 0;
     const allowedWearItems = [
         'gingerbreadsuit',
@@ -1307,6 +1296,62 @@ document.getElementById("backgroundImage").addEventListener("change", function(e
 			updateGalleryWithSearch(e.target.value);
 		}, 300);
 	});
+	let kits = []; // Array para almacenar los kits
+
+// Función para cargar los kits desde el contenido del campo 'command_list'
+function loadKit() {
+    const commandList = document.getElementById('command_list').innerText.trim();
+    const kitContainer = document.getElementById('kitContainer');
+    kitContainer.innerHTML = ""; // Limpiar el contenedor antes de cargar
+
+    // Dividir el contenido en líneas (cada línea es un 'kit add')
+    const commands = commandList.split('\n');
+
+    commands.forEach(command => {
+        const regex = /kit add "(.*?)" "(.*?)" (\d+) (\d+) "(.*?)"/;
+        const match = command.match(regex);
+
+        if (match) {
+            const kitName = match[1];
+            const itemName = match[2];
+            const quantity = match[3];
+            const id = match[4];
+            const location = match[5];
+
+            // Buscar la URL de la imagen basada en el nombre del ítem
+            const imageUrl = `path/to/images/${itemName}.png`; // Cambiar la ruta si es necesario
+
+            // Crear un contenedor para cada ítem
+            const itemContainer = document.createElement('div');
+            itemContainer.classList.add('item-container');
+
+            // Mostrar el ítem, cantidad, y ubicación en el contenedor
+            itemContainer.innerHTML = `
+                <img src="${imageUrl}" alt="${itemName}" class="item-image">
+                <div class="item-info">
+                    <span>Item: ${itemName}</span>
+                    <span>Quantity: ${quantity}</span>
+                    <span>Location: ${location}</span>
+                </div>
+            `;
+            kitContainer.appendChild(itemContainer);
+        }
+    });
+}
+
+// Función para cambiar el color de los bordes de todos los contenedores
+function changeBorderColor(color) {
+    const elements = document.querySelectorAll('.item-container');
+    elements.forEach(el => {
+        el.style.borderColor = color;
+    });
+}
+
+// Si necesitas agregar un nuevo kit de manera dinámica, puedes utilizar esta función para interactuar con la UI y agregar más kits.
+function addNewKit() {
+    // Aquí puedes manejar la creación de un nuevo kit si lo deseas (si es necesario para la UI)
+    alert('Add New Kit clicked');
+}
 
 	searchInput.addEventListener('keypress', (e) => {
 		if (e.key === 'Enter') {
