--- a/Index.html
+++ b/Index.html
@@ -467,7 +467,7 @@
                 <option value="freekit">freekit</option>
                 <option value="freekit2">freekit2</option>
                 <option value="vipkit">vipkit</option>
-                <option value="elitekit1">elitekit1</option>
+                <option value="elitekit1">elitekit</option>
                 <option value="elitekit2">elitekit2</option>
                 <option value="elitekit3">elitekit3</option>
                 <option value="elitekit4">elitekit4</option>
